# sqlx-crud

./: .gitignore  Cargo.toml
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/serenity/: Cargo.toml
examples/serenity/src/: main.rs
sqlx-crud-macros/src/: lib.rs
src/: lib.rs  traits.rs
