[workspace]
members = [".", "sqlx-crud-macros", "examples/axum", "examples/serenity"]

[package]
name = "sqlx-crud"
version = "0.4.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/treydempsey/sqlx-crud"
documentation = "https://docs.rs/sqlx-crud"
description = "Derive macro for SQLx to implement Create, Read, Update, and Delete (CRUD) methods for you."
license = "MIT"
keywords = ["sqlx", "orm", "crud", "database"]
categories = ["database", "asynchronous", "web-programming"]
authors = ["Trey Dempsey <trey.dempsey@gmail.com>"]

[features]
default = ["runtime-tokio", "tls-rustls"]
runtime-async-std = ["sqlx/runtime-async-std"]
runtime-tokio = ["sqlx/runtime-tokio"]
tls-rustls = ["sqlx/tls-rustls"]
tls-native-tls = ["sqlx/tls-native-tls"]

[dependencies]
futures = "0.3"
sqlx = { version = "0.7" }
sqlx-crud-macros = { version = "0.4", path = "sqlx-crud-macros" }
thiserror = "1"

[dev-dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
tokio-test = "0"
